[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ioc-enrich"
version = "0.1.0"
description = "CLI tool that enriches an indicator of compromise with a unified verdict from multiple threat-intel sources"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "9inteI" }]
keywords = ["threat-intel", "ioc", "security", "virustotal", "stix"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
]
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13.7",
    "pydantic>=2.7",
    "stix2>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
ioc-enrich = "ioc_enrich.cli:app"

[project.urls]
Repository = "https://github.com/9inteI/IOC-Enricher"

[tool.hatch.build.targets.wheel]
packages = ["src/ioc_enrich"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
